Merge-commit: Re-structure all UI classes for DI, Implement Helpers (GUIUtils, TUIUtils)